packages/svelte/tests/compiler-errors/samples/runes-no-derived-update/main.svelte
<script>
	const a = $state(0);
	const b = $derived({ a });
	b.a++;
</script>
